--- a/test.html
+++ b/test.html
@@ -102,68 +102,14 @@
         }
 
         // 4. Se llama cuando el estado del reproductor cambia. ¡Aquí está la lógica principal!
-        function onPlayerStateChange(event) {
-            const newState = event.data;
-            let statusString = "Desconocido";
-
-            // Evitar procesar el mismo estado múltiples veces si la API lo envía rápido
-            if (newState === lastState) {
-                // console.log("onPlayerStateChange: Estado repetido", newState, "ignorado.");
-                // return; // Descomentar si causa problemas, pero puede ocultar eventos válidos
-            }
-            lastState = newState; // Actualizar último estado conocido
-
-            console.log("onPlayerStateChange: Nuevo estado:", newState);
-
-            switch (newState) {
-                case YT.PlayerState.PLAYING: // 1
-                    statusString = "Reproduciendo";
-                    console.log("Estado: PLAYING");
-                    handlePlayingState(); // Lógica separada para claridad
-                    // Notificar a Android que se está reproduciendo (para sincronizar botón pausa)
-                    if (isAndroidApp()) {
-                        Android.notifyPlaybackResumed();
-                        console.log("Llamado: Android.notifyPlaybackResumed()");
-                    }
-                    break;
-                case YT.PlayerState.PAUSED: // 2
-                    statusString = "Pausado";
-                     console.log("Estado: PAUSED");
-                    // Notificar a Android que se pausó (para sincronizar botón play)
-                    if (isAndroidApp()) {
-                        Android.notifyPlaybackPaused();
-                        console.log("Llamado: Android.notifyPlaybackPaused()");
-                    }
-                    break;
-                case YT.PlayerState.ENDED: // 0
-                    statusString = "Finalizado";
-                     console.log("Estado: ENDED");
-                    // ¡¡NO LLAMAR a notifyPlaybackStopped() aquí!!
-                    // Intentar reproducir la siguiente canción automáticamente
-                    console.log("Intentando reproducir siguiente canción...");
-                    playNextTrack();
-                    break;
-                case YT.PlayerState.BUFFERING: // 3
-                    statusString = "Cargando...";
-                     console.log("Estado: BUFFERING");
-                    // Aquí podrías notificar a Android si quieres mostrar un estado de carga
-                    break;
-                case YT.PlayerState.CUED: // 5
-                    statusString = "Video Cargado";
-                     console.log("Estado: CUED");
-                    // El video está listo pero no ha empezado a reproducirse
-                    break;
-                case YT.PlayerState.UNSTARTED: // -1
-                    statusString = "No Iniciado";
-                     console.log("Estado: UNSTARTED");
-                    break;
-                default:
-                    statusString = `Estado ${newState}`;
-            }
-            updateDisplayInfo(statusString);
+        function onPlayerStateChange(event) {}
+        // 5. Manejo básico de errores del reproductor
+        function onPlayerError(event) {
+            console.error("onPlayerError: Error del reproductor:", event.data);
+            updateDisplayInfo("Error: " + event.data);
+            // Aquí podrías intentar saltar a la siguiente canción o mostrar un mensaje al usuario
+            // playNextTrack(); // Cuidado con bucles infinitos si todas las canciones fallan
         }
-
-        
 
         // --- Lógica de Estado PLAYING ---
         function handlePlayingState() {
@@ -301,7 +247,19 @@
             }
         }
 
-        
+        /** Función de DEBUG para simular una detención completa desde la web. */
+        function stopPlaybackAndNotify() {
+             console.log("stopPlaybackAndNotify: Deteniendo reproductor y notificando a Android...");
+             if (player && typeof player.stopVideo === 'function') {
+                player.stopVideo(); // Detiene y resetea el video actual
+             }
+             if (isAndroidApp()) {
+                Android.notifyPlaybackStopped();
+                 console.log("Llamado: Android.notifyPlaybackStopped()");
+             }
+             updateDisplayInfo("Detenido (DEBUG)");
+             currentVideoInfo = { id: null, title: null, artist: null, artwork: null }; // Limpiar info
+        }
 
     </script>
 
