--- a/test.html
+++ b/test.html
@@ -81,9 +81,9 @@
                 // width: '640',
                 videoId: initialVideoId,
                 playerVars: {
-                    'playsinline': 1 // Importante para reproducción en móviles sin pantalla completa automática
+                    'playsinline': 1, // Importante para reproducción en móviles sin pantalla completa automática
                     // 'controls': 0 // Opcional: Ocultar controles nativos de YouTube
-                    // 'autoplay': 1 // Autoplay podría no funcionar en todos los navegadores/móviles
+                     'autoplay': 1 // Autoplay podría no funcionar en todos los navegadores/móviles
                 },
                 events: {
                     'onReady': onPlayerReady,
