--- a/test1.html
+++ b/test1.html
@@ -1,57 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>VibeTurn Web Player (Ejemplo)</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        /* Estilos básicos para demostración */
-        body { font-family: sans-serif; padding: 10px; }
-        #player-container {
-            position: relative;
-            width: 100%;
-            max-width: 640px; /* O el tamaño que prefieras */
-            aspect-ratio: 16 / 9; /* Mantiene la proporción del video */
-            margin-bottom: 10px;
-            background-color: #000;
-        }
-        #youtube-player {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
-        #controls button { padding: 8px 12px; margin: 5px; }
-        #info { margin-top: 15px; border: 1px solid #ccc; padding: 10px; }
-        #info p { margin: 5px 0; }
-    </style>
-</head>
-<body>
-
-    <h1>VibeTurn - Reproductor Web</h1>
-
-    <div id="player-container">
-        <video controls width="320" height="240" src="https://rr1---sn-njaeyn7z.googlevideo.com/videoplayback?expire=1746987008&ei=oJMgaLTRDJeqxN8Pxt6H2QI&ip=2a00%3Ab6e0%3A1%3A20%3A15%3A%3A1&id=o-AMqEmxSYf4Kw7bnLTsPI31Fi9uCNFPTp4iJEWlKYIHae&itag=18&source=youtube&requiressl=yes&xpc=EgVo2aDSNQ%3D%3D&bui=AecWEAZsKUyTN7lZq4vpr_O1XCoQZsqdeyRfqy6n9VbhDBFG--t7BKYvk8jkyt3-fZ1LsUVcxIQ-W2Qa&vprv=1&svpuc=1&mime=video%2Fmp4&ns=dN8QAJNsfjjzKT-io6niB_wQ&rqh=1&cnr=14&ratebypass=yes&dur=212.091&lmt=1717051812678016&lmw=1&c=TVHTML5&sefc=1&txp=4538434&n=TFFSHEhAmPlUug&sparams=expire%2Cei%2Cip%2Cid%2Citag%2Csource%2Crequiressl%2Cxpc%2Cbui%2Cvprv%2Csvpuc%2Cmime%2Cns%2Crqh%2Ccnr%2Cratebypass%2Cdur%2Clmt&sig=AJfQdSswRgIhAMje7ZyAgKuajtz7CL6IavqdvU3TyVfzmIyTsys7XHtKAiEAtSLKCRj5qQIX4tpr0h2UXIq8eXV2Fu8nfbq-QfHAc4Y%3D&rm=sn-apaapm4g-apae7l,sn-25grk7e&rrc=79,104&fexp=24350590,24350737,24350827,24350961,24351173,24351177,24351495,24351528,24351594,24351638,24351658,24351661,24351662,24351673,24351757,24351859,24351864,24351876,24351904,24351906,24352017,24352023&req_id=f48fd936a48ea3ee&cmsv=e&rms=rdu,au&redirect_counter=2&cms_redirect=yes&ipbypass=yes&met=1746965414,&mh=7c&mip=2800:200:e280:1e10:b5db:939e:1802:f790&mm=29&mn=sn-njaeyn7z&ms=rdu&mt=1746965113&mv=m&mvi=1&pl=48&lsparams=ipbypass,met,mh,mip,mm,mn,ms,mv,mvi,pl,rms&lsig=ACuhMU0wRgIhAImmdVbLRrO70s7HN0EnH0XoQaNYJjDSdkxr-itiE8RHAiEAuJ95OGlKkj05qISRALujUG2BD6Du7kDWr5jaC7nBMpg%3D" playsinline="" id="youtube-player" autoplay="">
-          Your browser does not support the video tag.
-        </video> 
-    </div>
-
-    <div id="controls">
-        <button onclick="playPreviousTrack()">Anterior</button>
-        <button onclick="togglePlayPause()">Play/Pause (Web)</button>
-        <button onclick="playNextTrack()">Siguiente</button>
-        <button onclick="stopPlaybackAndNotify()">Detener (DEBUG)</button>
-    </div>
-
-    <div id="info">
-        <h2>Información Actual:</h2>
-        <p>Estado: <span id="status">Esperando...</span></p>
-        <p>Video ID: <span id="videoId">N/A</span></p>
-        <p>Título: <span id="title">N/A</span></p>
-        <p>Artista: <span id="artist">N/A</span></p>
-    </div>
-
-    
-
-</body>
-</html>
+<iframe width="720" height="405" src="https://www.youtube.com/embed/PPIQi1kl9gk" title="10 Años de HTL Hoteles!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
