--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>VibeTurn Web Player (Ejemplo)</title>
+    <title>VibeTurn Web Player (auto)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         /* Estilos básicos para demostración */
@@ -28,7 +28,7 @@
 </head>
 <body>
 
-    <h1>VibeTurn - Reproductor Web</h1>
+    <h1>VibeTurn - Reproductor auto</h1>
 
     <div id="player-container">
         <div id="youtube-player"></div>
@@ -81,9 +81,9 @@
                 // width: '640',
                 videoId: initialVideoId,
                 playerVars: {
-                    'playsinline': 1 // Importante para reproducción en móviles sin pantalla completa automática
+                    'playsinline': 1, // Importante para reproducción en móviles sin pantalla completa automática
                     // 'controls': 0 // Opcional: Ocultar controles nativos de YouTube
-                    // 'autoplay': 1 // Autoplay podría no funcionar en todos los navegadores/móviles
+                    'autoplay': 1 // Autoplay podría no funcionar en todos los navegadores/móviles
                 },
                 events: {
                     'onReady': onPlayerReady,
