--- a/test.html
+++ b/test.html
@@ -103,7 +103,7 @@
 
         // 4. Se llama cuando el estado del reproductor cambia. ¡Aquí está la lógica principal!
         function onPlayerStateChange(event) {
-            /*const newState = event.data;
+            const newState = event.data;
             let statusString = "Desconocido";
 
             // Evitar procesar el mismo estado múltiples veces si la API lo envía rápido
@@ -135,32 +135,9 @@
                         console.log("Llamado: Android.notifyPlaybackPaused()");
                     }
                     break;
-                case YT.PlayerState.ENDED: // 0
-                    statusString = "Finalizado";
-                     console.log("Estado: ENDED");
-                    // ¡¡NO LLAMAR a notifyPlaybackStopped() aquí!!
-                    // Intentar reproducir la siguiente canción automáticamente
-                    console.log("Intentando reproducir siguiente canción...");
-                    playNextTrack();
-                    break;
-                case YT.PlayerState.BUFFERING: // 3
-                    statusString = "Cargando...";
-                     console.log("Estado: BUFFERING");
-                    // Aquí podrías notificar a Android si quieres mostrar un estado de carga
-                    break;
-                case YT.PlayerState.CUED: // 5
-                    statusString = "Video Cargado";
-                     console.log("Estado: CUED");
-                    // El video está listo pero no ha empezado a reproducirse
-                    break;
-                case YT.PlayerState.UNSTARTED: // -1
-                    statusString = "No Iniciado";
-                     console.log("Estado: UNSTARTED");
-                    break;
-                default:
-                    statusString = `Estado ${newState}`;
+                
             }
-            updateDisplayInfo(statusString);*/
+            updateDisplayInfo(statusString);
         }
 
         // 5. Manejo básico de errores del reproductor
