--- a/test.html
+++ b/test.html
@@ -119,7 +119,14 @@
 
             console.log("onPlayerStateChange: Nuevo estado:", newState);
 
-            
+            switch (newState) {
+                case YT.PlayerState.PLAYING: // 1
+                    if (isAndroidApp()) {
+                        Android.notifyPlaybackResumed();
+                        console.log("Llamado: Android.notifyPlaybackResumed()");
+                    }
+                    break;
+            }
             updateDisplayInfo(statusString);
         }
 
