--- a/test.html
+++ b/test.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 
-    <h1>VibeTurn - Reproductor auto</h1>
+    <h1>VibeTurn - Reproductor test2</h1>
 
     <div id="player-container">
         <div id="youtube-player"></div>
